[build-system]
requires = ["setuptools>=61.2.0", "wheel", "setuptools_scm[toml]>=3.4.3", "kaitaiStructCompile.setuptools[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "hcd2lime"
authors = [{name = "KOLANICH"}]
description = "Converts an *.hcd file for Cypress chips into LiME memory dump representing the writes found in the dump"
readme = "ReadMe.md"
keywords = ["LiME", "Cypress", "Broadcom", "patchram", "internalblue", "bluetooth", "hci", "hcd"]
license = {text = "Unlicense"}
classifiers = [
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Development Status :: 4 - Beta",
	"Environment :: Other Environment",
	"Intended Audience :: Developers",
	"License :: Public Domain",
	"Operating System :: OS Independent",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
urls = {Homepage = "https://codeberg.org/KOLANICH-tools/hcd2lime.py"}
requires-python = ">=3.4"
dependencies = [
	"kaitaistruct @ git+https://github.com/kaitai-io/kaitai_struct_python_runtime",
	"lime @ git+https://codeberg.org/KOLANICH-libs/lime.py.git",
]
dynamic = ["version"]

[tool.setuptools]
zip-safe = true
packages = ["hcd2lime", "hcd2lime.kaitai"]

[tool.setuptools_scm]

[tool.kaitai]
outputDir = "hcd2lime/kaitai"

[tool.kaitai.repos."https://codeberg.org/KOLANICH/kaitai_struct_formats.git"."broadcom_patchram"]
update = true
localPath = "kaitai_struct_formats"

[tool.kaitai.repos."https://codeberg.org/KOLANICH/kaitai_struct_formats.git"."broadcom_patchram".formats.bluetooth_hcd]
path = "hardware/bluetooth/bluetooth_hcd.ksy"
